# vivify

./: .envrc  .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: cd.yml
config/: config.toml
old_src/: layout.rs  main.rs
playbooks/: local.yml
playbooks/tasks/: awesome.yml  rofi.yml
src/: main.rs  tomlmain.rs
tasks/: apt_bring_current.toml  apt_update.toml  apt_upgrade.toml
