[package]
name = "vivify"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5.2"
serde = "1.0.136"
serde_derive = "1.0.136"
inquire = "0.2.1"
colored = "2"
structopt = "0.3"
tui = "0.18"
crossterm = "0.25.0"
unicode-width = "0.1.9"
